--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,50 +8,69 @@
     <title>Landing Page</title>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/aa50831f38.js" crossorigin="anonymous"></script>
+    <!-- Fonts Google -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
-        <nav> <!-- bg-color -->
-            <div class="menu"> <!-- d-flex - justify-around container-->
-                <div class="menu-left"> 
-                    <ul> <!-- d-flex - justify-around -->
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Testimonials</a></li>
+        <nav>
+            <!-- bg-color -->
+            <div class="menu container">
+                <!-- d-flex - justify-around container-->
+                <div class="menu-left">
+                    <ul>
+                        <!-- d-flex - justify-around -->
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
                     </ul>
                 </div>
                 <div class="menu-right">
-                    <ul class="media-social"> <!-- d-flex - justify-around -->
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li> 
+                    <ul class="media-social">
+                        <!-- d-flex - justify-around -->
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fab fa-google"></i></a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="banner"> <!-- d-flex align-items-center container -->
-            <div class="info-banner"> <!-- float-left -->
+
+        <div class="banner">
+            <!-- d-flex align-items-center container -->
+            <div class="info-banner container">
+                <!-- float-left -->
                 <div class="title-banner">
                     <h1>Take photos like a pro.</h1> <!-- text-transform-uppercase -->
                 </div>
                 <div class="description-banner">
-                    <p>With only your iphone and capture app you can take stunning image like a professional Photographer.</p>
+                    <p>With only your iphone and capture app you can take stunning image like a professional
+                        Photographer.</p>
                 </div>
-                <div class="buttons-banner"> <!-- d-flex justify-around -->
-                    <a href="#" class="button-banner"> <!-- d-flex justify-between -->
+                <div class="buttons">
+                    <!-- d-flex justify-around -->
+                    <a href="#" class="button">
+                        <!-- d-flex justify-between -->
                         <i class="fab fa-apple"></i>
                         <span>iphone app</span>
                     </a>
-                    <a href="#" class="button-banner"> <!-- d-flex justify-between -->
+                    <a href="#" class="button">
+                        <!-- d-flex justify-between -->
                         <i class="fab fa-android"></i>
                         <span>iphone app</span>
                     </a>
                 </div>
-            </div>            
+            </div>
         </div>
-        <div class="footer-banner"> 
-            <div class="info-footer-banner"> <!-- d-flex justify-between container -->
+
+        <div class="footer-banner">
+            <div class="info-footer-banner container">
+                <!-- d-flex justify-between container -->
                 <a href="#"><img src="./img/google.svg" alt="Google"></a>
                 <a href="#"><img src="./img/fb.svg" alt="Facebook"></a>
                 <a href="#"><img src="./img/yahoo.svg" alt="Yahoo!"></a>
@@ -58,43 +78,133 @@
             </div>
         </div>
     </header>
+
     <main>
-        <section class="section-light"> <!-- bg-color --> <!-- padding-top and padding-bottom -->
-            <div class="box-section-1"> <!-- d-flex justify-between container -->
-                <div class="img-phone">
+        <section id="about" class="box-light">
+            <!-- bg-color -->
+            <!-- padding-top and padding-bottom -->
+            <div class="box-section-1 container">
+                <!-- d-flex justify-between container -->
+                <div class="box-section-img">
                     <img src="./img/Iphone.png" alt="Iphone">
                 </div>
-                <div class="title-box">
-                    <h2>Capture unforgettable moments.</h2>
+                <div class="box-section-info">
+                    <div class="title-box">
+                        <h2>Capture unforgettable moments.</h2>
+                    </div>
+                    <div class="description-title-box-1">
+                        <p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt,
+                            pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                            egestas.
+                        </p>
+                    </div>
+                    <div class="features-box-1">
+                        <!-- float-left -->
+                        <div class="feature">
+                            <!-- d-flex justify-start -->
+                            <img src="./img/Camera.svg" alt="">
+                            <span>Euismod ligula ipsum vulputate tellus.</span>
+                        </div>
+                        <div class="feature">
+                            <!-- d-flex justify-start -->
+                            <img src="./img/cam.svg" alt="">
+                            <span>Morbi non efficitur nibh sit amet est eros. </span>
+                        </div>
+                        <div class="feature">
+                            <!-- d-flex justify-start -->
+                            <img src="./img/Eyeball.svg" alt="">
+                            <span>Fusce faucibus ante liberonec luctus egestas.</span>
+                        </div>
+                        <div class="feature">
+                            <!-- d-flex justify-start -->
+                            <img src="./img/Painting.svg" alt="">
+                            <span>Quisque pretium malesuada ornare. </span>
+                        </div>
+                        <div class="feature">
+                            <!-- d-flex justify-start -->
+                            <img src="./img/Location.svg" alt="">
+                            <span>Cras interdum vestibulum dolor.</span>
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <a href="#" class="button">
+                            <!-- d-flex justify-between -->
+                            <i class="fas fa-play"></i>
+                            <span>watch the video</span>
+                        </a>
+                        <a href="#">get the app</a>
+                    </div>
                 </div>
-                <div class="description-title-box-1">
-                    <p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-                    </p>
+            </div>
+        </section>
+
+        <section id="features" class="section-green">
+            <div class="box-section-2 container"> <!-- display-grid -->
+                <div class="item-section-2"> <!-- display-flex gap flex-column -->
+                    <img src="./img/Stalking-You.svg" alt="Stalking You">
+                    <h4>Malesuada fames turpis.</h4>
+                    <p>vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
                 </div>
-                <div class="features-box-1"> <!-- float-left -->
-                    <div class="feature"> <!-- d-flex justify-start -->
-                        <img src="" alt="">
-                        <span>Euismod ligula ipsum vulputate tellus.</span>
-                    </div>
-                    <div class="feature"> <!-- d-flex justify-start -->
-                        <img src="" alt="">
-                        <span>Morbi non efficitur nibh sit amet est eros. </span>
-                    </div>
-                    <div class="feature"> <!-- d-flex justify-start -->
-                        <img src="" alt="">
-                        <span>Fusce faucibus ante liberonec luctus egestas.</span>
-                    </div>
-                    <div class="feature"> <!-- d-flex justify-start -->
-                        <img src="" alt="">
-                        <span>Quisque pretium malesuada ornare. </span>
-                    </div>
-                    <div class="feature"> <!-- d-flex justify-start -->
-                        <img src="" alt="">
-                        <span>Cras interdum vestibulum dolor.</span>
-                    </div>
+                <div class="item-section-2"> <!-- display-flex gap flex-column -->
+                    <img src="./img/Painting-white.svg" alt="Stalking You">
+                    <h4>Malesuada fames turpis.</h4>
+                    <p>vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
                 </div>
-            </div> 
+                <div class="item-section-2"> <!-- display-flex gap flex-column -->
+                    <img src="./img/Box.svg" alt="Stalking You">
+                    <h4>Malesuada fames turpis.</h4>
+                    <p>vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
+                </div>
+                <div class="item-section-2"> <!-- display-flex gap flex-column -->
+                    <img src="./img/Conversation.svg" alt="Stalking You">
+                    <h4>Malesuada fames turpis.</h4>
+                    <p>vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
+                </div>
+                <div class="item-section-2"> <!-- display-flex gap flex-column -->
+                    <img src="./img/Cogwheel.svg" alt="Stalking You">
+                    <h4>Malesuada fames turpis.</h4>
+                    <p>vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
+                </div>
+                <div class="item-section-2"> <!-- display-flex gap flex-column -->
+                    <img src="./img/Printer.svg" alt="Stalking You">
+                    <h4>Malesuada fames turpis.</h4>
+                    <p>vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="testimonials" class="section-light">
+            <div class="box-section-3 container">
+                <div class="description-box-section-3">
+                    <p>Integer pharetra tellus varius, dictum erat vel, maximus tellus. Sed vitae auctor ipsum. Aliquam luctus erat nec pulvinar vehicula donec congue tortor eget sem condimentum, ut tempor massa porttitor. Praesent tincidunt mi orci  in sollicitudin mi dapibus dapibus pellentesque habitant morbi tristique senectus et malesuada fames turpis egestas.</p>
+                </div>
+                <div class="name-autor">
+                    <h3>john doe</h3>
+                    <span>app developer</span>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-green">
+            <div class="box-section-4 container">
+                <p>Join Our Liste and stay updated!</p>
+                <input type="email" placeholder="Enter your email">
+                <i class="far fa-envelope"></i>
+                
+            </div>
         </section>
     </main>
+
+    <footer class="section-light">
+        <div class="box-footer container"> <!-- d-flex justify-center flex-direction-column-->
+            <div class="box-so"> <!-- d-flex gap -->
+                <a href="#"><i class="fab fa-android"></i></a>
+                <a href="#"><i class="fab fa-apple"></i></a>
+                <a href="#"><i class="fab fa-windows"></i></a>
+            </div>
+            <small>© 2015 <strong>Pixelhint.com.</strong> All Rights Reserved</small>
+        </div>
+    </footer>
 </body>
+
 </html>
