HTML and CSS finished desktop

--- a/index.html
+++ b/index.html
@@ -188,8 +188,11 @@
         <section class="section-green">
             <div class="box-section-4 container">
                 <p>Join Our Liste and stay updated!</p>
-                <input type="email" placeholder="Enter your email">
-                <i class="far fa-envelope"></i>
+                <form action="">
+                    <input class="input-email" type="text" placeholder="Enter your email">
+                    <i class="far fa-envelope"></i>
+                </form>
+
                 
             </div>
         </section>
