--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <nav>
             <!-- bg-color -->
             <div class="menu container">
+                <div class="btn-menu-mobile">
+                    <i class="fas fa-bars"></i>
+                </div>
+
                 <!-- d-flex - justify-around container-->
                 <div class="menu-left">
                     <ul>
@@ -208,6 +212,8 @@
             <small>© 2015 <strong>Pixelhint.com.</strong> All Rights Reserved</small>
         </div>
     </footer>
+
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
