--- a/index.html
+++ b/index.html
@@ -42,14 +42,28 @@
             <ul class="media-social">
               <!-- d-flex - justify-around -->
               <li>
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#">
+                  <div class="icon-media-social flex-full">
+                    <i class="fab fa-facebook-f"></i>
+                  </div>
+                </a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#">
+                  <div class="icon-media-social flex-full">
+                    <i class="fab fa-twitter"></i>
+                  </div>
+                </a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-google"></i></a>
+                <a href="#">
+                  <div class="icon-media-social flex-full">
+                    <i class="fab fa-google"></i>
+                  </div>
+                </a>
               </li>
+
+              
             </ul>
           </div>
         </div>
@@ -159,7 +173,7 @@
       <section id="features" class="section-green">
         <div class="box-section-2 container">
           <!-- display-grid -->
-          <div class="item-section-2">
+          <div class="item-section-2 flex-full-column">
             <!-- display-flex gap flex-column -->
             <img src="./img/Stalking-You.svg" alt="Stalking You" />
             <h4>Malesuada fames turpis.</h4>
@@ -168,7 +182,7 @@
               facilisis nisi quis mollis risus quisque ultrices elit.
             </p>
           </div>
-          <div class="item-section-2">
+          <div class="item-section-2 flex-full-column">
             <!-- display-flex gap flex-column -->
             <img src="./img/Painting-white.svg" alt="Stalking You" />
             <h4>Malesuada fames turpis.</h4>
@@ -177,7 +191,7 @@
               facilisis nisi quis mollis risus quisque ultrices elit.
             </p>
           </div>
-          <div class="item-section-2">
+          <div class="item-section-2 flex-full-column">
             <!-- display-flex gap flex-column -->
             <img src="./img/Box.svg" alt="Stalking You" />
             <h4>Malesuada fames turpis.</h4>
@@ -186,7 +200,7 @@
               facilisis nisi quis mollis risus quisque ultrices elit.
             </p>
           </div>
-          <div class="item-section-2">
+          <div class="item-section-2 flex-full-column">
             <!-- display-flex gap flex-column -->
             <img src="./img/Conversation.svg" alt="Stalking You" />
             <h4>Malesuada fames turpis.</h4>
@@ -195,7 +209,7 @@
               facilisis nisi quis mollis risus quisque ultrices elit.
             </p>
           </div>
-          <div class="item-section-2">
+          <div class="item-section-2 flex-full-column">
             <!-- display-flex gap flex-column -->
             <img src="./img/Cogwheel.svg" alt="Stalking You" />
             <h4>Malesuada fames turpis.</h4>
@@ -204,7 +218,7 @@
               facilisis nisi quis mollis risus quisque ultrices elit.
             </p>
           </div>
-          <div class="item-section-2">
+          <div class="item-section-2 flex-full-column">
             <!-- display-flex gap flex-column -->
             <img src="./img/Printer.svg" alt="Stalking You" />
             <h4>Malesuada fames turpis.</h4>
@@ -217,7 +231,7 @@
       </section>
 
       <section id="testimonials" class="section-light">
-        <div class="box-section-3 container">
+        <div class="box-section-3 flex-full-column container">
           <div class="description-box-section-3">
             <p>
               Integer pharetra tellus varius, dictum erat vel, maximus tellus.
@@ -236,7 +250,7 @@
       </section>
 
       <section class="section-green">
-        <div class="box-section-4 container">
+        <div class="box-section-4 flex-full-column container">
           <p>Join Our Liste and stay updated!</p>
           <form action="">
             <input
@@ -251,7 +265,7 @@
     </main>
 
     <footer class="section-light">
-      <div class="box-footer container">
+      <div class="box-footer flex-full-column container">
         <!-- d-flex justify-center flex-direction-column-->
         <div class="box-so">
           <!-- d-flex gap -->
